Added first visualisation. Works, but R CMD check complains
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@39642 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ exportMethods("findIsotopes")
 exportMethods("groupCorr")
 exportMethods("findAdducts")
 exportMethods("show")
+exportMethods("plotEICs")
