--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ exportMethods("groupCorr")
 exportMethods("findAdducts")
 exportMethods("show")
 exportMethods("plotEICs")
+exportMethods("plotPeaks")
