Rename diffreport Add small changes in code for better reading Adopted manpages
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@45459 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ useDynLib(CAMERA)
 import("methods")
 import("xcms")
 
-export("annotate","xsAnnotate","getPeaklist","getpspectra")
+export("annotate","xsAnnotate","getPeaklist","getpspectra","annotateDiffreport")
 exportClasses("xsAnnotate")
 exportMethods("groupFWHM")
 exportMethods("findIsotopes")
