--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,12 @@ useDynLib(CAMERA)
 
 import("methods")
 import("xcms")
+importFrom("RBGL", "highlyConnSG")
+importMethodsFrom("graph", "addEdge", "edgemode<-", "nodes")
+importFrom("graphics", "legend", "plot", "points", "strheight", "text")
+importFrom("grDevices", "rgb")
+importFrom("stats", "cor.test")
+importFrom("utils", "flush.console", "object.size", "read.table")
 
 export("annotate","xsAnnotate","getPeaklist","getpspectra","annotateDiffreport")
 exportClasses("xsAnnotate")
