Change Function getPeaklist to S4 Add parameter intval, for choosing the intensity values
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@50745 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ importFrom("grDevices", "rgb")
 importFrom("stats", "cor.test")
 importFrom("utils", "flush.console", "object.size", "read.table")
 
-export("annotate","xsAnnotate","getPeaklist","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss")
+export("annotate","xsAnnotate","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss")
 exportClasses("xsAnnotate")
 exportMethods("groupFWHM")
 exportMethods("findIsotopes")
@@ -20,3 +20,4 @@ exportMethods("findAdducts")
 exportMethods("show")
 exportMethods("plotEICs")
 exportMethods("plotPsSpectrum")
+exportMethods("getPeaklist")
