Add igraph to imports Export new Methods for graph separation and correlation Adjusted getAllPeakEICs to work with the latest CAMERA version Add first manpages for new methods Altered xsAnnotate to work with sample parameter as vector
Signed-off-by: ckuhl <ckuhl@vogt.ipb-sub.ipb-halle.de>

Conflicts:

	R/fct_groupCorr.R
	R/xsAnnotate.R

git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@54295 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom("graphics", "legend", "plot", "points", "strheight", "text")
 importFrom("grDevices", "rgb")
 importFrom("stats", "cor.test")
 importFrom("utils", "flush.console", "object.size", "read.table")
+importFrom("igraph","graph.data.frame","label.propagation.community")
 
 export("annotate","xsAnnotate","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss")
 exportClasses("xsAnnotate")
@@ -21,3 +22,10 @@ exportMethods("show")
 exportMethods("plotEICs")
 exportMethods("plotPsSpectrum")
 exportMethods("getPeaklist")
+exportMethods("getAllPeakEICs")
+exportMethods("calcPC",
+	      "calcPC.lpc",
+	      "calcPC.hcs")
+exportMethods("calcCiS",
+	      "calcCaS",
+	      "calcIsotopes")
