--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: CAMERA
 Version: 1.9.1
 Date: 2011-03-31
 Title: Collection of annotation related methods for mass spectrometry data 
-Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|rtautenh|sneumann}@ipb-halle.de
+Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|sneumann}@ipb-halle.de, rtautenh@scripps.edu
 Maintainer: Carsten Kuhl <ckuhl@ipb-halle.de>
 Depends: R (>= 2.1.0), methods, xcms (>= 1.13.5)
 Imports: methods, xcms, RBGL, graph, graphics, grDevices, stats, utils, Hmisc, igraph
