--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@ useDynLib(CAMERA)
 
 import("methods")
 import("xcms")
+import("igraph")
+
 importFrom("RBGL", "highlyConnSG")
 importFrom("graph", "ftM2graphNEL")
 importFrom("Hmisc", "rcorr")
@@ -10,7 +12,7 @@ importFrom("graphics", "legend", "plot", "points", "strheight", "text")
 importFrom("grDevices", "rgb")
 importFrom("stats", "cor.test")
 importFrom("utils", "flush.console", "object.size", "read.table")
-importFrom("igraph","graph.data.frame","label.propagation.community")
+
 
 importClassesFrom(Biobase, "Versioned")
 importFrom(Biobase, validMsg)
