Some changes in the unitTests Renamed all unitTests Add man pages for groupDen, findKendrickMasses and plotPeakEICs
Signed-off-by: Carsten Kuhl <ckuhl@schur.ipb-sub.ipb-halle.de>

git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@72815 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,14 +17,17 @@ importFrom("utils", "flush.console", "object.size", "read.table")
 importClassesFrom(Biobase, "Versioned")
 importFrom(Biobase, validMsg)
 
-export("annotate","xsAnnotate","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss","cleanParallel","combinexsAnnos")
+export("annotate","xsAnnotate","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss", 
+"cleanParallel","combinexsAnnos", "findKendrickMasses")
 exportClasses("xsAnnotate")
 exportMethods("groupFWHM")
 exportMethods("findIsotopes")
 exportMethods("groupCorr")
+exportMethods("groupDen")
 exportMethods("findAdducts")
 exportMethods("show")
 exportMethods("plotEICs")
+exportMethods("plotPeakEICs")
 exportMethods("plotPsSpectrum")
 exportMethods("getPeaklist")
 exportMethods("getAllPeakEICs")
