Camera2Metfrag export started
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@72835 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,18 @@ importFrom("utils", "flush.console", "object.size", "read.table")
 importClassesFrom(Biobase, "Versioned")
 importFrom(Biobase, validMsg)
 
-export("annotate","xsAnnotate","getpspectra","annotateDiffreport","getIsotopeCluster","findNeutralLossSpecs","findNeutralLoss", 
-"cleanParallel","combinexsAnnos", "findKendrickMasses")
+export("annotate",
+       "annotateDiffreport",
+       "cleanParallel",
+       "combinexsAnnos",
+       "getIsotopeCluster",
+       "getpspectra",
+       "findKendrickMasses",
+       "findNeutralLoss", 
+       "findNeutralLossSpecs",
+       "pspec2metfrag",
+       "pspec2metfusion",
+       "xsAnnotate")
 exportClasses("xsAnnotate")
 exportMethods("groupFWHM")
 exportMethods("findIsotopes")
