A small change in one unit test
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@74553 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/unitTests/Makefile
+++ b/inst/unitTests/Makefile
@@ -1,6 +1,6 @@
 TOP=../..
 PKG=${shell cd ${TOP};pwd}
-SUITE=doRUnit.R
+SUITE=../../tests/runTests.R
 R=R
 
 all: inst test
@@ -14,5 +14,5 @@ test: # Run unit tests
 	cd ${TOP}/tests;\
 	${R} --vanilla --slave < ${SUITE}
 
-clean:
-	rm -f report.html  reportSummary.txt  report.txt *~
+# clean:
+#	rm -f report.html  reportSummary.txt  report.txt *~
