Fix a bug with imports from the igraph package. It exported a groups function with conflicts with the groups methods from xcms. This is cleared. Raise version to 1.25.1
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@105914 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@ useDynLib(CAMERA)
 
 import("methods")
 import("xcms")
-import("igraph")
 
 importFrom("RBGL", "highlyConnSG")
 importFrom("graph", "ftM2graphNEL")
@@ -12,6 +11,7 @@ importFrom("graphics", "legend", "plot", "points", "strheight", "text")
 importFrom("grDevices", "rgb")
 importFrom("stats", "cor.test")
 importFrom("utils", "flush.console", "object.size", "read.table")
+importFrom("igraph", "graph.data.frame", "label.propagation.community")
 
 
 importClassesFrom(Biobase, "Versioned")
