--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: r
 r: bioc-devel
 warnings_are_errors: false
-bioc_packages: "mzR","faahKO","xcms"
+bioc_packages: mzR","faahKO","xcms
 sudo: true
 apt_packages: libnetcdf-dev
