Add NEWS and bump version, export getReducedPeaklist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ exportMethods("show")
 exportMethods("plotEICs")
 exportMethods("plotPsSpectrum")
 exportMethods("getPeaklist")
+exportMethods("getReducedPeaklist")
 exportMethods("getAllPeakEICs")
 exportMethods("calcPC",
 	      "calcPC.lpc",
