Export function to find isotopes based on mz and intensity values
- Export the core functionality to find isotopes among a grouped set of
  features (aka pseudo spectrum). Issue #51.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,9 @@ export("annotate",
        "xsAnnotate", 
        "compoundQuantiles",
        "compoundLibraries", 
-       "massWindowSizes")
+       "massWindowSizes",
+       "calcIsotopeMatrix",
+       "findIsotopePeaks")
 
 exportClasses("xsAnnotate")
 exportClasses("compoundQuantiles")
